// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elevation Tokens should create the color tokens 1`] = `
"{
  \\"color\\": {
    \\"elevation\\": {
      \\"dp-2\\": {
        \\"canvas\\": {
          \\"value\\": \\"{alias.color.elevation.dp-2.canvas.value}\\"
        }
      },
      \\"dp-4\\": {
        \\"canvas\\": {
          \\"value\\": \\"{alias.color.elevation.dp-4.canvas.value}\\"
        }
      },
      \\"dp-8\\": {
        \\"canvas\\": {
          \\"value\\": \\"{alias.color.elevation.dp-8.canvas.value}\\"
        }
      },
      \\"dp-12\\": {
        \\"canvas\\": {
          \\"value\\": \\"{alias.color.elevation.dp-12.canvas.value}\\"
        }
      },
      \\"dp-16\\": {
        \\"canvas\\": {
          \\"value\\": \\"{alias.color.elevation.dp-16.canvas.value}\\"
        }
      },
      \\"dp-24\\": {
        \\"canvas\\": {
          \\"value\\": \\"{alias.color.elevation.dp-24.canvas.value}\\"
        }
      }
    }
  }
}"
`;

exports[`Elevation Tokens should create the shadow tokens 1`] = `
"{
  \\"shadow\\": {
    \\"elevation\\": {
      \\"dp-2\\": {
        \\"filter\\": {
          \\"value\\": \\"{alias.shadow.elevation.dp-2.filter.value}\\"
        }
      },
      \\"dp-4\\": {
        \\"filter\\": {
          \\"value\\": \\"{alias.shadow.elevation.dp-4.filter.value}\\"
        }
      },
      \\"dp-8\\": {
        \\"filter\\": {
          \\"value\\": \\"{alias.shadow.elevation.dp-8.filter.value}\\"
        }
      },
      \\"dp-12\\": {
        \\"filter\\": {
          \\"value\\": \\"{alias.shadow.elevation.dp-12.filter.value}\\"
        }
      },
      \\"dp-16\\": {
        \\"filter\\": {
          \\"value\\": \\"{alias.shadow.elevation.dp-16.filter.value}\\"
        }
      },
      \\"dp-24\\": {
        \\"filter\\": {
          \\"value\\": \\"{alias.shadow.elevation.dp-24.filter.value}\\"
        }
      }
    }
  }
}"
`;
